attempting to fix proj layout problem on testsite

--- a/test/css/proj_style.css
+++ b/test/css/proj_style.css
@@ -518,16 +518,16 @@ div.miscdesc{
 		margin-bottom:10px;
 	}
 	.web-content{
-		width:100%;
+		width:95%;
 	}
 	.game-content{
-		width:100%;
+		width:95%;
 	}
 	.misc-content{
-		width:100%;
+		width:95%;
 	}
 	.maincontent{
-		width:100%;
+		width:95%;
 	}
 }
 
